# co-expression_networks

./: .gitignore  .gitmodules  README.md  aggregate.py  analise.py  analise_corr_diff_report.py  binomise.py  build.sh  cluster.py  config.py  corr_diff_analysis.py  corr_diff_cluster.py  corr_diff_tool.py  exhaustive_aggregate.py  exhaustive_analise.py  exhaustive_binomise.py  exhaustive_cluster.py  exhaustive_hyperise.py  exhaustive_pipeline.py  exhaustive_pipeline.sh  exhaustive_score_pipeline.py  exhaustive_test.py  exhaustive_ztest.py  exhaustive_ztest_pipeline.py  hyperise.py  pearsonr_test.py  pipeline.py  pipeline.sh  synthetic.py  test.py  tracker.py  ztest.py
core/: __init__.py  correlation_tests.py  correlation_utils.py  utils.py
core/fast_computations/: __init__.py  correlations.py  tests.py  utils.py
core/utils/: dump.py  utils.py
native/: CMakeLists.txt
native/src/: corr_utils.cpp  correlation_computations.cpp  pearson_correlation.cpp  utils_computations.cpp
native/src/correlations/: correlations.cpp  correlations.h
native/src/lib/: scores.cpp
native/src/pipelines/: pipelines.cpp  pipelines.h
native/src/scores/: scores.cpp  scores.h
native/src/tests/: tests.cpp
native/src/utils/: utils.cpp  utils.h
scripts/: config.py  pearsonr_test.py  spearmanr_abs_proba.py  spearmanr_less_proba.py  spearmanr_test_proba.py  synthetic_1.py  synthetic_2.py
scripts/core/: CorrTest.py  correlation.py  correlation_proba.py  correlation_test.py  spearmanr.py  utils.py
tests/: pearsonr_test.py  spearmanr_1.py  spearmanr_2.py
(+6 files in other folders)
